Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104781

Tooltip Example: Wrong object is moved when performing dragging on another one

XMLWordPrintable

    • All
    • 585bfe600 (dev), 2af7f65da (6.5), 454de9478 (tqtc/lts-6.2)

      Step to reproduce

      1. Open and run Tools Tips Example
      2. Try to drag objects

      Observed result

      Sometimes the object that is supposed to be dragged is not moving but another random one is.

      <See attached video>

        For Gerrit Dashboard: QTBUG-104781
        # Subject Branch Project Status CR V

            axelspoerl Axel Spoerl
            chpham Chinh Pham
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes