examples/widgets/widgets/tooltips/sortingbox.h
@@ -68,6 +68,7 @@ class SortingBox : public QWidget
 
 public:
     SortingBox(QWidget *parent = nullptr);
+    ~SortingBox();
 
 protected:
     bool event(QEvent *event) override;
@@ -88,7 +89,7 @@ private:
     int updateButtonGeometry(QToolButton *button, int x, int y);
     void createShapeItem(const QPainterPath &path, const QString &toolTip,
                          const QPoint &pos, const QColor &color);
-    int itemAt(const QPoint &pos);
+    qsizetype itemAt(const QPoint &pos);
     void moveItemTo(const QPoint &pos);
     QPoint initialItemPosition(const QPainterPath &path);
     QPoint randomItemPosition();
@@ -99,7 +100,7 @@ private:
                                   const char *member);
 
 //! [2]
-    QList<ShapeItem> shapeItems;
+    QList<ShapeItem *> shapeItems;
     QPainterPath circlePath;
     QPainterPath squarePath;
     QPainterPath trianglePath;
